# tuner-pipecat-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup_guide.md
.github/workflows/: ci.yml
docs/: api.md  getting-started.md  integration.md
examples/: README.md
examples/appointment_booking/: .env.example  README.md  appointment_booking.py  pyproject.toml
examples/customer_support/: .env.example  README.md  customer_support.py  pyproject.toml
examples/nova_clinic_pipecat/: bot.py  mock_data.json  pyproject.toml
examples/pizza_order/: .env.example  README.md  pizza_order.py  pyproject.toml
src/pipecat_flows_tuner/: __init__.py  accumulator.py  client.py  config.py  flow_manager_integration.py  latency_metrics.py  models.py  observer.py  payload_builder.py  transcript_enricher.py
src/tuner_pipecat_sdk/: __init__.py  _base.py  accumulator.py  client.py  config.py  flows_observer.py  models.py  observer.py  payload_builder.py  tool_timing_registry.py  transcript_enricher.py
tests/: __init__.py  conftest.py  test_accumulator.py  test_accumulator_frames.py  test_accumulator_payload.py  test_accumulator_timing.py  test_accumulator_transcript.py  test_base.py  test_client.py  test_config.py  test_flow_integration.py  test_flows_observer.py  test_metrics_frame.py  test_models.py  test_observer.py
