[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipecat-flows-tuner"
version = "0.1.0"
description = "Pipecat FrameProcessor that observes pipecat-flows calls and sends structured data to the Tuner API."
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai>=0.0.85",
    "pydantic>=2.0",
    "loguru~=0.7.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/pipecat_flows_tuner"]
