[project]
name = "nova-clinic-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[webrtc,silero,deepgram,cartesia,openai,daily,runner]>=1.0.0",
    "tuner-pipecat-sdk",
    "python-dotenv>=1.0.1",
]

[tool.uv.sources]
tuner-pipecat-sdk = { path = "../../", editable = true }
